--- a/Up.html
+++ b/Up.html
@@ -2,7 +2,7 @@
 <html>
 <form action="action_page.php" style="border:1px solid #ccc">
   <div class="container">
-    <h1>Sign Up</h1>
+    <h1>Sign Up page</h1>
     <p>Please fill in this form to create an account.</p>
     <hr>
 
